--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -20,7 +20,8 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sklearn"
+    "import sklearn\n",
+    "from datetime import datetime as dt"
    ]
   },
   {
@@ -2184,11 +2185,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "from datetime import datetime as dt\n",
+    "\n",
+    "# d = dt.strptime('2010-03-01', '%Y-%m-%d').date()\n",
+    "\n",
+    "austin_fixed['Date'] = austin_fixed['Date'].apply(lambda x: dt.strptime(x,'%Y-%m-%d'))\n",
+    "\n",
+    "# con esto hemos forzado el type de Date que sea un datetime64"
    ]
   },
   {
@@ -2200,11 +2209,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Date                          datetime64[ns]\n",
+       "TempHighF                              int64\n",
+       "TempAvgF                               int64\n",
+       "TempLowF                               int64\n",
+       "DewPointHighF                        float64\n",
+       "DewPointAvgF                         float64\n",
+       "DewPointLowF                         float64\n",
+       "HumidityHighPercent                  float64\n",
+       "HumidityAvgPercent                   float64\n",
+       "HumidityLowPercent                   float64\n",
+       "SeaLevelPressureHighInches           float64\n",
+       "SeaLevelPressureAvgInches            float64\n",
+       "SeaLevelPressureLowInches            float64\n",
+       "VisibilityHighMiles                  float64\n",
+       "VisibilityAvgMiles                   float64\n",
+       "VisibilityLowMiles                   float64\n",
+       "WindHighMPH                          float64\n",
+       "WindAvgMPH                           float64\n",
+       "WindGustMPH                          float64\n",
+       "Snow                                   int64\n",
+       "Fog                                    int64\n",
+       "Rain                                   int64\n",
+       "Thunderstorm                           int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "austin_fixed.head(5)"
+    "austin_fixed.dtypes"
    ]
   },
   {
