--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -659,11 +659,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.512\n",
+      "Model:                            OLS   Adj. R-squared:                  0.500\n",
+      "Method:                 Least Squares   F-statistic:                     43.16\n",
+      "Date:                Wed, 06 Mar 2019   Prob (F-statistic):           4.64e-58\n",
+      "Time:                        17:49:40   Log-Likelihood:                -2281.1\n",
+      "No. Observations:                 422   AIC:                             4584.\n",
+      "Df Residuals:                     411   BIC:                             4629.\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        152.7643      2.658     57.469      0.000     147.539     157.990\n",
+      "x1             0.3035     61.286      0.005      0.996    -120.169     120.776\n",
+      "x2          -237.6393     62.837     -3.782      0.000    -361.162    -114.117\n",
+      "x3           510.5306     68.156      7.491      0.000     376.553     644.508\n",
+      "x4           327.7370     66.876      4.901      0.000     196.275     459.199\n",
+      "x5          -814.1317    424.044     -1.920      0.056   -1647.697      19.434\n",
+      "x6           492.8146    344.227      1.432      0.153    -183.850    1169.480\n",
+      "x7           102.8485    219.463      0.469      0.640    -328.561     534.258\n",
+      "x8           184.6065    167.336      1.103      0.271    -144.334     513.547\n",
+      "x9           743.5196    175.359      4.240      0.000     398.807    1088.232\n",
+      "x10           76.0952     68.293      1.114      0.266     -58.152     210.343\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.544   Durbin-Watson:                   2.026\n",
+      "Prob(Omnibus):                  0.462   Jarque-Bera (JB):                1.421\n",
+      "Skew:                           0.004   Prob(JB):                        0.491\n",
+      "Kurtosis:                       2.716   Cond. No.                         224.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "mod = sm.OLS(diabetes_target_train, sm.add_constant(diabetes_data_train))\n",
+    "res = mod.fit()\n",
+    "print(res.summary())"
    ]
   },
   {
@@ -683,11 +730,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answers here:"
+    "# Your answers here:\n",
+    "\n",
+    "# El F-score es 43.16, pero nos interesa mirar la probabilidad de F-score, que es muy pequeña (4.64e-58). Como es menor de 0.05, concluimos que al menos uno de los coeficientes o features es significante (rechazamos su null)\n",
+    "# por otro lado, podemos ver el p-value de cada uno de los coeficientes. Si son menores de 0.05, rechazamos la null, que quiere decir que el coeficiente es significante y discriminatorio en el experimento.\n",
+    "# También podemos fijarnos en el intervalo de confianza, y si este contiene el 0, NO rechazamos la null, porque la feature en ese caso no es discriminatoria al poder adpotar el valor 0."
    ]
   },
   {
